# projekt-2-SwwK2048

./: CMakeLists.txt
src/: main.cpp
